[package]
name = "egak"
version = "0.1.0"
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/LeafChage/egak"
repository = "https://github.com/LeafChage/egak"
description = "Sample image generator."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
imageproc = "0.22.0"
clap = "2.20.3"
image = "0.23.14"
rusttype = "0.9.2"

